welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: recursive variable A needs type
var A=A
      ^BDRBuggle:7: error: not found: type !=
if (litMessage(): String!=A) {
                        ^